--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hot-toast": "^2.5.1",
     "react-router": "^7.1.5",
     "serve": "^14.2.4",
+    "yandex-metrica-ab-react": "^1.7.0",
     "zod": "^3.24.1",
     "zustand": "^5.0.3"
   },
